vlib/v/checker/tests/vweb_missing_result.vv
import vweb

struct App {
	vweb.Context
}

// actions must return results
@['/foo/:bar']
pub fn (mut app App) foo(a string) {
}

fn main() {
	port := 8181
	vweb.run[App](&App{}, port)
}
